Issue #13415: os.unsetenv() doesn't ignore errors anymore.